PCS BAckup 26Dec2023/Backup-Source/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Phoenix_NDC_Registered_with_FDA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>NDC Registered with FDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC__c</fullName>
        <inlineHelpText>National Drug Code: SAP field</inlineHelpText>
        <label>NDC - 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Name_of_Shipper_to_UPS__c</fullName>
        <label>Name of Shipper to UPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Product_Lowest_Price__c</fullName>
        <label>New Product Lowest Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Notify_Tracking_Customer_price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Tracking Customer price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Notify_best_price_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify best price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_OTC_Lowest_Price__c</fullName>
        <label>OTC Lowest Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Old_Throughput_Cost__c</fullName>
        <label>Old Throughput Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Oncology__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Oncology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes_Inj</fullName>
                    <label>Yes-Inj</label>
                </value>
                <value>
                    <fullName>Yes_Oral</fullName>
                    <label>Yes-Oral</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Opty_Miss_Evaluation_Price__c</fullName>
        <inlineHelpText>Auto-generated field</inlineHelpText>
        <label>Opty Miss Evaluation Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Orange_Book_Rating__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Orange Book Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Overall_market__c</fullName>
        <description>This is used in IMS Market share popup component at Bid Line Item level</description>
        <inlineHelpText>Total Number of Pills (uploaded data)</inlineHelpText>
        <label>Monthly Overall Market (ea/eu)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_PMA__c</fullName>
        <description>Device Premarket Number formerly known as Device Pre-Market Application  (Affirmation of Compliance Code).</description>
        <label>PMA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_PS_Partner_1_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>PS Partner 1</label>
        <referenceTo>Phoenix_Partner__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_PS_Partner_1__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>PS % -Partner 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_PS_Partner_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>PS Partner 2</label>
        <referenceTo>Phoenix_Partner__c</referenceTo>
        <relationshipLabel>Products (PS Partner 2 Name)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_PS_Partner_2__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>PS % -Partner 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Peanut_Oils__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Peanut Oils</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Profit_Partner_1__c</fullName>
        <formula>Phoenix_Pkg_Size__c  *  Phoenix_Per_Unit_Profit_Rate_Partner_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Per Unit Profit  - Partner 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Profit_Partner_2__c</fullName>
        <formula>Phoenix_Pkg_Size__c  *  Phoenix_Per_Unit_Profit_Rate_Partner_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Per Unit Profit  - Partner 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Profit_Rate_Partner_1__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Per Unit Profit Rate - Partner 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Profit_Rate_Partner_2__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Per Unit Profit Rate - Partner 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Percentage_of_Active_Ingredient__c</fullName>
        <label>Percentage of Active Ingredient</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pkg_Qty__c</fullName>
        <label>Pkg Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pkg_Size__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Pkg Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Play_Book_Link__c</fullName>
        <formula>IF(ISBLANK( Phoenix_Product_Playbook__c), &apos;&apos;, HYPERLINK(&quot;/lightning/r/&quot;+Phoenix_Product_Playbook__c+&quot;/view?fv0=&quot;,&quot;&quot;+Name+&quot; Playbook&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-generated field</inlineHelpText>
        <label>Play Book Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Preservative_Free__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Preservative Free</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Best_Price__c</fullName>
        <inlineHelpText>Previous Best Price for Government Pricing.</inlineHelpText>
        <label>Previous Best Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Contract_for_Best_Price__c</fullName>
        <label>Previous Contract # for Best Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Customer_for_best_price__c</fullName>
        <label>Previous Customer for best price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Tracking_Customer_price__c</fullName>
        <inlineHelpText>Previous Value of Tracking Customer Price</inlineHelpText>
        <label>Previous Tracking Customer price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_API_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_API_Facility_Name__c</fullName>
        <label>API Site Facility Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_API_Last_Inspection_Date__c</fullName>
        <label>API Site -  Date of Last Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_API_MFG_Name__c</fullName>
        <label>MFG Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_API_State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_API_Vertical__c</fullName>
        <label>Vertical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_MFG_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_MFG_FDA_Approved__c</fullName>
        <label>Mfg Site - FDA Approved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_MFG_Facility_Name__c</fullName>
        <label>Mfg Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_MFG_Inspection_Result__c</fullName>
        <label>Mfg Site - Result of Inspection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_MFG_Last_Inspection_Date__c</fullName>
        <label>Mfg Site -  Date of Last Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_MFG_Name__c</fullName>
        <label>MFG Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Primary_MFG_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Product Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Marketing</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Playbook</label>
        <referenceTo>Phoenix_Product_Playbook__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Type_for_CM_Fee__c</fullName>
        <formula>IF( Phoenix_Controlled_Substance_Class__c =&apos;C2&apos;, &apos;C2&apos;, IF( Phoenix_REMS__c =TRUE,&apos;REMS&apos;,IF(Phoenix_Special_Product__c=TRUE,&apos;Special Product&apos;,&apos;Regular Product&apos;)))</formula>
        <inlineHelpText>Auto-generated field</inlineHelpText>
        <label>Product Type for CM Fee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proprietary_Name__c</fullName>
        <description>Proprietary Name / Trade Name</description>
        <label>Proprietary Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_REMS1__c</fullName>
        <description>This field is for Reporting purpose only.</description>
        <formula>IF(  Phoenix_REMS__c ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>REMS (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_REMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Risk Evaluation and Mitigation Strategy.</description>
        <inlineHelpText>Risk Evaluation and Mitigation Strategy: User Input field</inlineHelpText>
        <label>REMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Reg_in_Puerto_Rico_TAA_Comp1__c</fullName>
        <description>This field is for Reporting purpose only.</description>
        <formula>IF(Phoenix_Registered_in_Puerto_Rico__c ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Registered in Puerto Rico (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Registered_in_Puerto_Rico__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Registered in Puerto Rico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Related_Parties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related Parties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Return_Per_Unit__c</fullName>
        <label>Return Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Royalty_Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Royalty Partner</label>
        <referenceTo>Phoenix_Partner__c</referenceTo>
        <relationshipLabel>Products (Royalty Partner Name)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Royalty__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Royalty %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rx_SRx_OTC__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Rx/SRx/OTC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Created_Date__c</fullName>
        <label>SAP Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Material__c</fullName>
        <label>SAP Material</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Modified_Date__c</fullName>
        <label>SAP Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Molecule_Description__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>SAP Molecule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Number__c</fullName>
        <label>SAP Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Pack_Size__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>SAP Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Product_Family__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>SAP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Product_Name__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>SAP Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Sub_Therapy_Description__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>SAP Sub Therapy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Therapy_Description__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>SAP Therapy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SB_Retail_Price__c</fullName>
        <label>SB Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SIN__c</fullName>
        <inlineHelpText>Special Item Number
42-2A:  Single source
innovator, multiple source innovator, biological &amp; insulin
pharmaceutical products
42-2B:  Generic &amp; multiple
source pharmaceuticals &amp; drugs, human blood products
&amp; over-the-counter drugs: User Input field</inlineHelpText>
        <label>SIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>42-2A</fullName>
                </value>
                <value>
                    <fullName>42-2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Shelf_Life__c</fullName>
        <description>Shelf Life will be in Months.</description>
        <label>Shelf Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Shields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Special_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Special Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Strength__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sugar_Free__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Sugar Free</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Supply_Chain_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supply Chain Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_TAA_Compliant1__c</fullName>
        <description>This field is for Reporting purpose only.</description>
        <formula>IF( Phoenix_TAA_Compliant__c  ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAA Compliant (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_TAA_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TAA: Trade Agreement Act: User Input field</inlineHelpText>
        <label>TAA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Tallman_Lettering__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Tallman Lettering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Texas_Medicaid_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Texas Medicaid Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Texas_Medicaid_Covrge1__c</fullName>
        <formula>IF(  Phoenix_Texas_Medicaid_Coverage__c ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Texas Medicaid Coverage (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Throughput_cost__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Throughput Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Track_Best_price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to Track Best Price for this Product (Government Pricing)</inlineHelpText>
        <label>Track Best price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Tracking_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tracking Customer for Government Pricing</inlineHelpText>
        <label>Tracking Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Tracking_Customer_price__c</fullName>
        <inlineHelpText>Current Tracking Customer Price</inlineHelpText>
        <label>Tracking Customer price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Type__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Type (ANDA / NDA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Type_for_PS_Royalty__c</fullName>
        <inlineHelpText>Finance User Input</inlineHelpText>
        <label>Type ( for PS &amp; Royalty)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BD/IL</fullName>
                </value>
                <value>
                    <fullName>Inhouse/CMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_UPC_Universal_Product_Code__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>UPC (Universal Product Code)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_USDA_Permit_Number__c</fullName>
        <label>USDA Permit Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_USDA_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>USDA Permit Required (When shipping in bulk).</description>
        <label>USDA Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Unit_Dose1__c</fullName>
        <description>This field is for Reporting purpose only.</description>
        <formula>IF(  Phoenix_Unit_Dose__c ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Unit Dose (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Unit_Dose__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Unit Dose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vertically_Integrated1__c</fullName>
        <description>This field is used for Reporting purpose only</description>
        <formula>IF( Phoenix_Vertically_Integrated__c ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Vertically Integrated (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vertically_Integrated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Vertically Integrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <inlineHelpText>Wholesale Acquisition Cost: SAP field</inlineHelpText>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Yellow_Dye_5__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Yellow Dye #5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>This field only used for reports</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <description>Product Strength</description>
        <label>Strength</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_CPT_Batch_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be updated when Customer Product Tracker Creator Batch process the record.</description>
        <label>Is CPT Batch Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZNOTPhoenix_Is_Private_Label_OTC_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZOldIs Private Label (do not use)</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Control_Label_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Phoenix_Pkg_Size__c</columns>
        <columns>Phoenix_Is_Exclude_Bid__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Phoenix_Is_Control_Label__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Phoenix_Rx_SRx_OTC__c</columns>
        <columns>Phoenix_Product_Director__c</columns>
        <columns>Strength__c</columns>
        <columns>Phoenix_Orange_Book_Rating__c</columns>
        <columns>Phoenix_Marketing_Lead__c</columns>
        <columns>Phoenix_NDC__c</columns>
        <columns>Phoenix_NDC_11__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Control_Label__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active OTC Control Label Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Phoenix_Is_New_Product__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Phoenix_WAC__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Phoenix_NDC_11__c</columns>
        <columns>Phoenix_Product_Director__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_New_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Bid_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Phoenix_NDC__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Phoenix_Strength__c</columns>
        <columns>Phoenix_Pkg_Size__c</columns>
        <columns>Phoenix_SAP_Pack_Size__c</columns>
        <columns>Phoenix_Rx_SRx_OTC__c</columns>
        <columns>Phoenix_Product_Director__c</columns>
        <columns>Phoenix_Is_New_Product__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Phoenix_Marketing_Lead__c</columns>
        <columns>Phoenix_Approved_Lowest_Price_SKU__c</columns>
        <columns>Phoenix_WAC__c</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Exclude_Bid__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Bid Products</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Bid_Products_Supply_Planner</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Phoenix_NDC__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Phoenix_Strength__c</columns>
        <columns>Phoenix_Pkg_Size__c</columns>
        <columns>Phoenix_SAP_Pack_Size__c</columns>
        <columns>Phoenix_Rx_SRx_OTC__c</columns>
        <columns>Phoenix_Product_Director__c</columns>
        <columns>Phoenix_Supply_Chain_Planner__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Phoenix_Marketing_Lead__c</columns>
        <columns>Phoenix_Is_Private_Label_OTC__c</columns>
        <columns>Phoenix_Approved_Lowest_Price_SKU__c</columns>
        <columns>Phoenix_WAC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Exclude_Bid__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Phoenix_Supply_Chain_Planner__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Active Bid Products - Supply Planner</label>
    </listViews>
</CustomObject>